6910605: C2: NullPointerException/ClassCaseException is thrown when C2 with DeoptimizeALot is used

Set the reexecute bit for runtime calls _new_array_Java when they used for _multianewarray bytecode.

Reviewed-by: never